feat: exo 4 start